k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mybookstore
  labels:
    name: mybookstore
    app: bookstore
